--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    margin:0;
+}
 #logo{
     height: 15%;
     width: 10%;
@@ -12,4 +15,7 @@
 #info-container{   
   padding:10px; 
 }
-
+#map{
+    width: 100vw;
+    height:100vh;
+}
