--- a/style.css
+++ b/style.css
@@ -1,17 +1,14 @@
-body{
+#nav-bar{
+    background-color: rgb(126, 14, 14);
+    background-image: url(images/coronavirus.jpg);
+    color: white;
     margin:0;
 }
-#logo{
-    height: 15%;
-    width: 10%;
-    padding:5px;
+h1{
+    padding:20px;
+    text-align: center;
 }
-#nav-bar{
-    display: flex;
-    flex-direction: row;
-    background-color: rgb(126, 14, 14);
-    color: white;
-}
+
 #info-container{   
   padding:10px; 
 }
