--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
   font-family: 'Open Sans', sans-serif;
+  margin:0 auto;
 }
 /*Header*/
 header{
@@ -13,19 +14,18 @@ header{
 h1{
   margin-left: 10px;
 }
-#info-container{
-  display: flex;
-  flex-direction: row;
-}
+
 #results{
-  margin-left: 10px;
-  font-size: 15px;
-  padding:0 auto;
+  /*margin-left: 10px;*/
+  font-size: 20px;
+  line-height: 25px;
+  background-color: rgb(212, 205, 205);
+
 }
 /*Map*/
 #map{
     width: 100vw;
-    height:80vh;
+    height:100vh;
 }
 #app-form{
   Font-size: 15px;
@@ -59,5 +59,10 @@ h4{
     .group {
       flex-direction:row;
       width: 100%;
+      }
+      #info-container{
+        display: flex;
+        flex-direction: row;
+        
       }
  }
