--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*Global*/
 *{
   font-family: 'Open Sans', sans-serif;
   margin:0 auto;
@@ -20,16 +21,17 @@ h4{
 }
 /*Results*/
 #results{
-  /*margin-left: 10px;*/
   font-size: 20px;
   line-height: 25px;
   background-color: rgb(212, 205, 205);
-
+}
+#results-list{
+  margin-top: 10px;
 }
 /*Map*/
 #map{
     width: 100vw;
-    height:100vh;
+    height:78vh;    
 }
 /*Form*/
 #app-form{
@@ -47,7 +49,6 @@ h4{
     background: rgb(192, 11, 11);
     color: rgb(231, 216, 216);
   } 
-
 /*Groups & Items-Mobile First*/
 .group{
     display: flex;
@@ -55,16 +56,9 @@ h4{
 }
   .item{
     flex:1;
-  }
-   
-  @media screen and (min-width:768px){
-    .group {
-      flex-direction:row;
-      width: 100%;
-      }
-      #info-container{
-        display: flex;
-        flex-direction: row;
-        
-      }
+  }   
+  @media screen and (min-width:800px){
+    .group, #info-container{
+      flex-direction:row;      
+      }     
  }
